<resources>
    <string name="app_name">BuQu</string>
    <string name="category">Category</string>
    <string name="board">Board</string>
    <string name="settings">Settings</string>
    <string name="empty_quote_message">No Quotes Found</string>
    <string name="note_not_found">Note Not Found</string>
    <string name="empty_board_message">Create Your First Board</string>
    <string name="empty_category_message">Add New Category</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="other">Other</string>
    <string name="reset_confirm">All data will be deleted. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="background">Background</string>
    <string name="font_type">Font Type</string>
    <string name="visibility">Visibility</string>
    <string name="author">Author</string>
    <string name="book">Books</string>
    <string name="book_empty">Book Not Found</string>
    <string name="position">Position</string>
    <string name="start">Start</string>
    <string name="center">Center</string>
    <string name="end">End</string>
    <string name="quote">Quotes</string>
</resources>